# InsightPipeline

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-publish.yml
data/raw/2024-02-13/: Book1.csv
data/raw/2024-02-14/: Book2.csv
data/raw/2024-02-15/: Book3.csv
src/insight_pipeline/: load.py  pipeline_config.py  spark_pipeline.py  transform.py  utils.py
src/insight_pipeline_package/: ingest.py  load.py  pipeline_config.py  spark_pipeline.py  transform.py  utils.py
tests/: create_test_session.py  test_transform.py
