[project]
name = "insight_pipeline"
version = "0.0.8"
authors = [
  { name="Irina Sterligova", email="irinagruzde8a@gmail.com" },
]
description = "A spark packade for ETL"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sterligova/insight-pipelinet"
Issues = "https://github.com/sterligova/insight-pipeline/issues"